--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hyperterm-transparent-bg",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "An emulated transparent background for HyperTerm!",
   "main": "index.js",
   "scripts": {
-    "test": "''"
+    "test": ""
   },
   "repository": {
     "type": "git",
